force-app/main/default/objects/Account/fields/Total_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Total_Insurance__c</fullName>
    <description>Value of all insurance policies.</description>
    <formula>20000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>