force-app/main/default/objects/Account/fields/Total_Investments__c.field-meta.xml
<CustomField>
    <fullName>Total_Investments__c</fullName>
    <description>Value of all investment accounts.</description>
    <formula>20000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Investments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>