force-app/main/default/objects/Account/fields/Total_Nonfinancial_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Nonfinancial_Assets__c</fullName>
    <description>Value of all physical assets such as collectibles or precious metals.</description>
    <formula>20000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Nonfinancial Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>