force-app/main/default/objects/Account/fields/Total_Number_of_Financial_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Financial_Accounts__c</fullName>
    <description>Total number of the client&apos;s financial accounts that are managed by our firm.</description>
    <formula>20000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Financial Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>