force-app/main/default/objects/Account/fields/Total_Outstanding_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Credit__c</fullName>
    <description>Value of client&apos;s total outstanding credit from the financial accounts that are managed by our firm.</description>
    <formula>20000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>