force-app/main/default/objects/Account/fields/Total_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium__c</fullName>
    <description>Total Premium field for Insurance</description>
    <label>Total Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>