force-app/main/default/objects/Account/fields/Total_Property_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Property_Assets__c</fullName>
    <label>Total Property Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>