force-app/main/default/objects/Account/fields/Total_Property_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Property_Liabilities__c</fullName>
    <label>Total Property Liabilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>