force-app/main/default/objects/Account/fields/Unique_Value_Proposition_3__c.field-meta.xml
<CustomField>
    <fullName>Unique_Value_Proposition_3__c</fullName>
    <label>Unique Value Proposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>