force-app/main/default/objects/Account/fields/Unique_Value_Proposition_Summary__c.field-meta.xml
<CustomField>
    <fullName>Unique_Value_Proposition_Summary__c</fullName>
    <formula>&quot;✓ &quot;&amp;Unique_Value_Proposition_1__c+BR()+
&quot; ✓ &quot;&amp;Unique_Value_Proposition_2__c+BR()+
&quot; ✓ &quot;&amp;Unique_Value_Proposition_3__c</formula>
    <label>Unique Value Proposition Summary</label>
    <type>Text</type>
</CustomField>