force-app/main/default/objects/Account/fields/Wallet_Share__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Share__c</fullName>
    <formula>100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wallet Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>