force-app/main/default/objects/Account/recordTypes/business.recordType-meta.xml
<RecordType>
    <fullName>business</fullName>
    <active>true</active>
    <label>business</label>
</RecordType>