force-app/main/default/objects/Account/recordTypes/Referrer_Business.recordType-meta.xml
<RecordType>
    <fullName>Referrer_Business</fullName>
    <active>true</active>
    <label>Referrer (Business)</label>
</RecordType>