force-app/main/default/objects/Account/listViews/All_Person_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Person_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Postal_State__pc</columns>
    <columns>State_1__pc</columns>
    <columns>State_2__pc</columns>
    <columns>State__pc</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>All Person Accounts</label>
</ListView>