force-app/main/default/objects/Account/listViews/All_Referrers.listView-meta.xml
<ListView>
    <fullName>All_Referrers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Referrer_Business_Type__c</columns>
    <columns>On_Board_Referral__c</columns>
    <columns>Are_you_Clean_Energy_Council_Accredited__c</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>LAST_ACTIVITY_DATETIME</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Referrer_Business</value>
    </filters>
    <label>All Referrers</label>
</ListView>