force-app/main/default/objects/Account/listViews/CFCU_90_Potentials.listView-meta.xml
<ListView>
    <fullName>CFCU_90_Potentials</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>CFCU 90% Potentials</label>
</ListView>